finalizacion de proyecto, archivos borrados

--- a/src/pug/includes/components/config.pug
+++ b/src/pug/includes/components/config.pug
@@ -1,12 +1,7 @@
 //- variables generales del proyecto
--empresa='Código Creativo'
--pages=['Inicio', 'Quiénes Somos', 'Qué Hacemos', 'Contáctanos']
--pagesDescription=['Tus mejores ideas en Código']
--sites=['#inicio', '#', '#', '#', '#']
--services=['Sitios WEB', 'Apps', 'Motion Graphics', 'Diseño 2D y 3D publicitario']
--serviceSites=['inicio.html', 'site01.html', 'site02.html', 'site03.html']
--servicesImg=['image1.png', 'images/tropa.png', 'images/comunidad.png', 'images/clan.png']
--pageTitle='inicio'
+-empresa='Refugio del Zorzal'
+-pagesDescription=['Muy Pronto']
+-pageTitle='Pronto'
 -siteTitle= empresa
--description='Diseñamos Experiencias WEB, publicamos sitios profesionales, originales, creativos y funcionales'
+-description='Quiere que su negocio tenga visibilidad 24 horas al dia y 7 dias a la semana? Con nosotros encontrara todo lo necesario para impulsar su marca en el mundo digital dándole visibilidad a su negocio para ganar nuevos clientes, incrementar sus ventas e ingresos.'
 -sizeImgServices=300
