--- a/src/pug/includes/metatags_webapp.pug
+++ b/src/pug/includes/metatags_webapp.pug
@@ -1,8 +1,8 @@
 mixin metatagsWebApp()
   -var mobileColor = '#F58634'
   -var favicon = './favicon.ico'
-  -var logoPNG = './images/logo.png'
-  -var logoSVG = './images/logo.svg'
+  -var logoPNG = './images/logoFav.png'
+  -var logoSVG = './images/logoFav.svg'
   meta(name="HandheldFriendly", content="true")
   meta(name="MobileOptimized", content="320")
   meta(name="theme-color", content=mobileColor)
