--- a/src/scss/utilities/_mixins.scss
+++ b/src/scss/utilities/_mixins.scss
@@ -43,37 +43,57 @@
 }
 @mixin mQ($media) {
   @if $media==xsS {
-    @media screen and (max-width:$xsScreen) {
+    @media screen and (min-width:$xsScreen) {
       @content;
     }
   }
-  @else if $media==smallS {
-    @media screen and (max-width:$smallScreen) {
+  @if $media==smallS {
+    @media screen and (min-width:$smallScreen) {
       @content;
     }
   }
-  @else if $media==mediumS {
-    @media screen and (max-width:$mediumScreen) {
+  @if $media==mediumS {
+    @media screen and (min-width:$mediumScreen) {
       @content;
     }
   }
-  @else if $media==wideS {
-    @media screen and (max-width:$wideScreen) {
+  @if $media==wideS {
+    @media screen and (min-width:$wideScreen) {
       @content;
     }
   }
-  @else if $media==largeS {
-    @media screen and (max-width:$largeScreen) {
+  @if $media==largeS {
+    @media screen and (min-width:$largeScreen) {
       @content;
     }
   }
-  @else if $media==xlS {
-    @media screen and (max-width:$xlScreen) {
+  @if $media==xlS {
+    @media screen and (min-width:$xlScreen) {
       @content;
     }
   }
-  @else if $media==opS {
-    @media screen and (max-width:$opScreen) {
+  @if $media==opS {
+    @media screen and (min-width:$opScreen) {
+      @content;
+    }
+  }
+}
+@mixin mediaS($consulta) {
+  $xsScreen    : 320px; //iphone retina
+  $smallScreen : 480px; //telefonos
+  $mediumScreen: 760px; //tablets
+  $wideScreen  : 990px; //escritorio - pequeño
+  $largeScreen : 1200px; //escritorio normal
+  $xlScreen    : 1366px;  //escritorio portatil
+  $opScreen    : 1480px; //tv fullHD
+
+  @if $consulta==xxs {
+    @media #{$xsScreen} {
+      @content;
+    }
+  }
+  @if $consulta==sS {
+    @media #{smallScreen} {
       @content;
     }
   }
