--- a/src/pug/includes/hero.pug
+++ b/src/pug/includes/hero.pug
@@ -1,13 +1,9 @@
-header.hero#inicio
-  img(src="./images/logoCompleto.png", alt="Codigo Creativo para Grandes Ideas" height="200" class="heroLogo")
-  h2.headerText Pocisionamos en la WEB tus mejores Ideas.
-  .headerSlogan
-    h3 Diseñamos experiencias WEB,
-    p Publicamos sitios profesionales,
-    p originales, creativos y funcionales.
-  //-+phraseHero('Pocisionamos en la WEB tus mejores Ideas,', 'Diseñamos experiencias WEB,', 'Publicamos sitios profesionales,')
-  +bannerContact(
-    '¿Estás Dispuesto a iniciar?',
-    [['+57 304 407 12 88'], ['(8) 673 53 62']],
-    '¡Quiero dar el primer paso!')
-
+header.hero
+  .encabezado
+    .texto
+      h2.headerText SITIO EN
+      h1 CONSTRUCCIÓN
+  .logo
+    img(src="./images/logoCompleto.png", alt="Codigo Creativo para Grandes Ideas" height="120" class="heroLogo")
+  .url
+    h2 www.refugiodelzorzal.co
