--- a/src/scss/pages/_hero.scss
+++ b/src/scss/pages/_hero.scss
@@ -1,6 +1,74 @@
 body{
-  min-height: 100vh;
-  //color: $clTextoGen;
-  // background-image: linear-gradient(#fff 95%, rgba(163, 160, 160, 0.76) 95%);
-  // background-size: 100% $line-height;
+  .hero{
+    height: 100vh;
+    background-image: url('./images/fondoMov.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom right;
+    .encabezado{
+      color: $clTextoGen;
+      margin-bottom: 7rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .texto{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+      }
+    }
+    .logo{
+      // background-color: forestgreen;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      padding-left: 2rem;
+      img{
+        width: 35%;
+        max-width: 150px;
+        height: auto;
+      }
+    }
+    .url{
+      // background-color: fuchsia;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: $color;
+      background-color: #595959;
+    }
+  }
+}
+@include mQ(smallS){
+  body{
+    .hero{
+      background-image: url('./images/fondoDes.jpg');
+      background-position: bottom right;
+      .encabezado{
+        margin-bottom: 1rem;
+        align-items: flex-end;
+      }
+      .logo{
+        img{
+          width: 35%;
+          max-width: 150px;
+          height: auto;
+        }
+      }
+    }
+  }
+}
+@include mQ(mediumS){
+  body{
+    .hero{
+      .encabezado{
+        margin-bottom: 1rem;
+        align-items: flex-end;
+      }
+      .logo{
+        justify-content: center;
+      }
+    }
+  }
 }
